--- a/sphere.html
+++ b/sphere.html
@@ -54,7 +54,7 @@
     </div>
     <div class="content-right">
       <div class="inner">
-        {{> hello}}
+        {{> support}}
       </div>
     </div>
   </div>
@@ -152,6 +152,32 @@
   <button>Click</button>
   <p>asldkff sadfklj</p>
   <div id="pie"></div>
+</template>
+
+<template name="support">
+    <div class="support-sidebar">
+        <h2>Hilfe &amp; Support</h2>
+        <p>
+            Lieber Nutzer,<br>
+            Sie gehören zum exklusiven Teil unserer Innovationspartner und
+            genießen somit eine besondere Kundenbetreuung. Sollten Sie Fragen
+            zur Nutzung des Tools oder Anregungen und Feedback haben zögern Sie
+            bitte nicht uns unverzüglich zu kontaktieren!
+        </p>
+        <div class="phone-number">
+            030 609 8448 – 11
+        </div>
+        <p>oder</p>
+        <a class="email" href="mailto:beta@about-local.com">
+            beta@about-local.com
+        </a>
+        <p>Wir freuen uns auf Sie!</p>
+        <div class="contact">
+            <img class="bordered" src="img/mark.jpg">
+            <img class="hand-writing" src="img/mark-handwriting.gif">
+            <p>Geschäftsführer</p>
+        </div>
+    </div>
 </template>
 
 <template name="companyProfile">
