grayed out future features

--- a/sphere.html
+++ b/sphere.html
@@ -52,11 +52,11 @@
         {{> companyProfile}}
       </div>
     </div>
-    <div class="content-right">
+    <aside class="content-right">
       <div class="inner">
         {{> support}}
       </div>
-    </div>
+    </aside>
   </div>
 
   <footer>
@@ -191,7 +191,7 @@
         <button class="export">Exportieren</button>
         <p>{{sector}}</p>
       </header>
-      <p class="budget">Online-Werbebudget: <strong>xxx €</strong> <span>geschätzt</span></p>
+      <p class="budget not-yet-available">Online-Werbebudget: <strong>xxx €</strong> <span>geschätzt</span></p>
       <div class="average-numbers">
         <section class="iq">
           <div>
@@ -210,7 +210,7 @@
           </div>
           <figure>{{averageRating}}</figure>
         </section>
-        <section class="popularity">
+        <section class="popularity not-yet-available">
           <label>Popularität</label>
           <div class="bar-chart">
             <div class="value">14</div>
@@ -350,7 +350,7 @@
           </p>
           <a class="details">Details</a>
         </div>
-        <div class="popularity">
+        <div class="popularity not-yet-available">
           <h3>Popularität</h3>
           <div class="value"><strong>{{averageRating}}</strong> ∕ 5</div>
           <div class="bar-chart">
