--- a/sphere.html
+++ b/sphere.html
@@ -36,162 +36,16 @@
 
   <div id="grid-overlay"></div>
   <div id="baseline-grid-overlay"></div>
-  <nav id="top-nav">
-    <div class="grid-wrapper">
-      <img class="logo" src="/img/logo-top.gif">
-      <span>
-        asdf
-      </span>
-      {{> navLoggedOut}}
-    </div>
-  </nav>
-  <div class="grid-wrapper">
-    <header class="page-description">
-      <a class="close">Schließen</a>
-      <h1>Ein Firmenprofil im Detail</h1>
-      <p>
-        Auf dem Firmenprofil finden Sie alle Informationen zu den
-        Online-Aktivitäten des ausgewählten Unternehmens.
-      </p>
-    </header>
-    <nav class="profile-navigation">
-      <div class="back-to-search">
-        <a class="back">Zurück zu den Suchergebnissen</a>
-      </div>
-      <div class="switch-profiles">
-        <a class="back">Vorheriges Profil</a>
-        <a class="next">nächstes Profil</a>
-      </div>
-    </nav>
-    <div class="content-left">
-      <div class="inner">
-        {{> companyProfile}}
-      </div>
-    </div>
-    <aside class="content-right">
-      <div class="inner">
-        {{> support}}
-      </div>
-    </aside>
-  </div>
-  <div class="grid-wrapper">
-    <nav class="profile-navigation bottom">
-      <div class="back-to-search">
-        <a class="back">Zurück zu den Suchergebnissen</a>
-      </div>
-      <div class="switch-profiles">
-        <a class="back">Vorheriges Profil</a>
-        <a class="next">nächstes Profil</a>
-      </div>
-    </nav>
-  </div>
 
-  <footer>
-    <div class="grid-wrapper">
-      <ul>
-        <li>
-          <header>Hilfe</header>
-        </li>
-        <li>
-          <a href="#">Kontakt</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <header>Unternehmen</header>
-        </li>
-        <li>
-          <a href="#">Team &amp; Jobs</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <header>Rechtliches</header>
-        </li>
-        <li>
-          <a href="#">Impressum</a>
-        </li>
-        <li>
-          <a href="#">Datenschutz</a>
-        </li>
-        <li>
-          <a href="#">AGBs</a>
-        </li>
-      </ul>
-      <ul class="social-media">
-        <li>
-          <header>Social Media</header>
-        </li>
-        <li>
-          <a href="#" class="twitter">Twitter</a>
-        </li>
-      </ul>
-      <address>
-        <ul class="vcard">
-          <li class="fn">
-            AboutLocal GmbH
-          </li>
-          <li>
-            <a class="email" href="mailto:info@about-local.com">info@about-local.com</a>
-          </li>
-          <li class="tel">
-            +49 30 ∕ 609 84 48 - 0
-          </li>
-          <li class="adr">
-            <div class="street-address">
-              Greifswalder Str. 212
-            </div>
-            <div>
-              <span class="postal-code">
-                10405
-              </span>
-              <span class="locality">
-                Berlin
-              </span>
-            </div>
-            <div class="region">
-              Berlin
-            </div>
-            <div class="country-name">
-              Germany
-            </div>
-          </li>
-        </ul>
-      </address>
-    </div>
-  </footer>
+  {{> navigation}}
+
+  {{> companyProfilePage}}
+
+  {{> footer}}
 
   <!--[if lt IE 9]></div><![endif]-->
 
 </body>
-
-<template name="loginForm">
-  <form id="dropdown-login-form" method="POST">
-    <label for="email">E-Mail-Adresse</label>
-    <input type="text" name="email" value="{{ username }}">
-    <label for="password">Passwort</label>
-    <input type="password" name="password" value="{{ password }}">
-    <label class="checkbox">
-      <input type="checkbox"> Zugangsdaten merken
-    </label>
-    <p class="error"></p>
-    <button>Einloggen</button>
-  </form>
-</template>
-
-<template name="navLoggedOut">
-  <ul class="nav-right">
-    <li class="tour">Tour</li>
-    <li class="home">Home</li>
-    <li class="login">
-      <a>Login</a>
-    </li>
-  </ul>
-  {{> loginForm}}
-</template>
 
 <template name="hello">
   <h1>Hello World!</h1>
@@ -204,213 +58,4 @@
   <button>Click</button>
   <p>asldkff sadfklj</p>
   <div id="pie"></div>
-</template>
-
-<template name="support">
-    <div class="support-sidebar">
-        <h2>Hilfe &amp; Support</h2>
-        <p>
-            Lieber Nutzer,<br>
-            Sie gehören zum exklusiven Teil unserer Innovationspartner und
-            genießen somit eine besondere Kundenbetreuung. Sollten Sie Fragen
-            zur Nutzung des Tools oder Anregungen und Feedback haben zögern Sie
-            bitte nicht uns unverzüglich zu kontaktieren!
-        </p>
-        <div class="phone-number">
-            030 609 8448 – 11
-        </div>
-        <p>oder</p>
-        <a class="email" href="mailto:beta@about-local.com">
-            beta@about-local.com
-        </a>
-        <p>Wir freuen uns auf Sie!</p>
-        <div class="contact">
-            <img class="bordered" src="img/mark.jpg">
-            <img class="hand-writing" src="img/mark-handwriting.gif">
-            <p>Geschäftsführer</p>
-        </div>
-    </div>
-</template>
-
-<template name="companyProfile">
-  <article class="company-profile">
-    {{#with currentProfile}}
-      <header>
-        <span class="input-wrapper">
-          <input value="deine mudda"/><button>Speichern</button>
-        </span>
-        <h1>{{name}}</h1>
-        <button class="export">Exportieren</button>
-        <p>{{sector}}</p>
-      </header>
-      <p class="budget not-yet-available">Online-Werbebudget: <strong>xxx €</strong> <span>geschätzt</span></p>
-      <div class="average-numbers">
-        <section class="iq">
-          <div>
-            <label>IQ</label>
-            <span>Internet Score, max. 100</span>
-          </div>
-          <div>
-            <figure>{{iq}}</figure>
-            <span>Early Adopter</span>
-          </div>
-        </section>
-        <section class="ratings">
-          <label>Bewertungen</label>
-          <div class="bar-chart">
-            <div class="value">{{averageRating}}</div>
-          </div>
-          <figure>{{averageRating}}</figure>
-        </section>
-        <section class="popularity not-yet-available">
-          <label>Popularität</label>
-          <div class="bar-chart">
-            <div class="value">14</div>
-          </div>
-          <figure>14</figure>
-        </section>
-      </div>
-      <section class="address">
-        <h2>Unternehmensdaten</h2>
-        <address class="vcard">
-          <div class="org">{{name}}</div>
-          <div class="addr">
-            <div class="street-address">
-              {{street}}
-            </div>
-            <div>
-              <span class="postal-code">
-                {{zip}}
-              </span>
-              <span class="locality">
-                {{city}}
-              </span>
-            </div>
-          </div>
-        </address>
-        <div>
-          <label>Tel:</label>
-          <span class="tel">
-            {{phone}}
-          </span>
-        </div>
-        <div>
-          <label>Fax:</label>
-          <span class="fax">
-            {{fax}}
-          </span>
-        </div>
-        <div>
-          <label>Web:</label>
-          <a class="url" href="http://{{homepage}}" target="_blank">
-            {{homepage}}
-          </a>
-        </div>
-        <div>
-          <label>E-Mail:</label>
-          <a class="email" href="mailto:{{email}}">
-            {{email}}
-          </a>
-        </div>
-      </section>
-      <section class="marketing">
-        <h2>Marketingaktivitäten <small class="not-yet-available">&nbsp;&nbsp;History anzeigen</small></h2>
-        <div class="web active">
-          <h3>
-            Web-Auftritte
-          </h3>
-          <div class="value">
-            34
-          </div>
-          <div class="pie">
-          </div>
-          <div class="details-description">
-            <p>
-              Web&shy;seite, Branchen&shy;bücher, Bewertungs&shy;portale, Social Media
-            </p>
-            <a class="details">Details</a>
-          </div>
-          <div class="details">
-            <h2>Webseite</h2>
-          </div>
-        </div>
-        <div class="ads">
-          <h3>
-            Online-Anzeigen
-          </h3>
-          <div class="value">
-            34
-          </div>
-          <div class="pie">
-          </div>
-          <div class="details-description">
-            <p>
-              Bezahlte Werbe&shy;anzeigen z.B. auf Such&shy;maschinen oder Facebook
-            </p>
-            <a class="details">Details</a>
-          </div>
-        </div>
-        <div class="coupons">
-          <h3>
-            Gutscheine
-          </h3>
-          <div class="value">
-            34
-          </div>
-          <div class="pie">
-          </div>
-          <div class="details-description">
-            <p>
-              Gutschein-Webseiten, Group Buying Aktionen und Gutschein-Apps
-            </p>
-            <a class="details">Details</a>
-          </div>
-        </div>
-        <div class="interaction">
-          <h3>
-            Interaktion
-          </h3>
-          <div class="value">
-            34
-          </div>
-          <div class="pie">
-          </div>
-          <div class="details-description">
-            <p>
-              Interaktion mit Kunden über Social Media Anwendungen
-            </p>
-            <a class="details">Details</a>
-          </div>
-        </div>
-      </section>
-      <section class="customer-feedback">
-        <h2>Kundenfeedback</h2>
-        <div class="ratings">
-          <h3>Bewertungen</h3>
-          <div class="value"><strong>{{averageRating}}</strong> ∕ 5</div>
-          <div class="bar-chart">
-            <div class="value">{{averageRating}}</div>
-          </div>
-          <p>
-            <strong>{{averageRating}} Sterne</strong> von 5
-          </p>
-          <p>
-            <strong>2812 Kundenbewertungen</strong>
-          </p>
-          <p>
-            Bewertet auf <strong>2 Portalen</strong>
-          </p>
-          <a class="details">Details</a>
-        </div>
-        <div class="popularity not-yet-available">
-          <h3>Popularität</h3>
-          <div class="value"><strong>{{averageRating}}</strong> ∕ 5</div>
-          <div class="bar-chart">
-            <div class="value">{{averageRating}}</div>
-          </div>
-        </div>
-      </section>
-    {{/with}}
-  </article>
-  {{invokeAfterLoad}}
 </template>
