--- a/sphere.html
+++ b/sphere.html
@@ -8,6 +8,9 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
+  <!-- favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <!-- TypeKit -->
   <script type="text/javascript" src="//use.typekit.com/ejk1cvz.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
