--- a/sphere.html
+++ b/sphere.html
@@ -16,19 +16,18 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <script>
-      jQuery(function ($) {
-          $(document).keydown(function (e) {
-              /*if (!e.ctrlKey) {
-                  return;
-              }*/
-              if ("B" == String.fromCharCode(e.which)) {
-                  $("#baseline-grid-overlay").toggle();
-              }
-              if ("G" == String.fromCharCode(e.which)) {
-                  $("#grid-overlay").toggle();
-              }
-          });
-      });
+      if (document.location.href.indexOf("http://localhost:3000" === 0)) {
+        jQuery(function ($) {
+            $(document).keydown(function (e) {
+                if ("B" == String.fromCharCode(e.which)) {
+                    $("#baseline-grid-overlay").toggle();
+                }
+                if ("G" == String.fromCharCode(e.which)) {
+                    $("#grid-overlay").toggle();
+                }
+            });
+        });
+      }
 
 
       // Tell IE9 to use its built-in console
