--- a/sphere.html
+++ b/sphere.html
@@ -15,6 +15,14 @@
   <script type="text/javascript" src="//use.typekit.com/ejk1cvz.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+  <script type='text/javascript'>
+    (function (d, t) {
+       var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
+       bh.type = 'text/javascript';
+       bh.src = '//www.bugherd.com/sidebarv2.js?apikey=irvjpuntmlsqdnlzr9lxtg';
+       s.parentNode.insertBefore(bh, s);
+     })(document, 'script');
+  </script>
   <script>
       if (document.location.href.indexOf("http://localhost:3000" === 0)) {
         jQuery(function ($) {
@@ -28,7 +36,6 @@
             });
         });
       }
-
 
       // Tell IE9 to use its built-in console
       if (Function.prototype.bind && (typeof console === 'object' || typeof console === 'function') && typeof console.log == "object") {
