uniform, slightly changed conversionbox

--- a/sphere.html
+++ b/sphere.html
@@ -100,7 +100,7 @@
           };
       }
 
-      if ($.browser.msie) {
+/*      if ($.browser.msie) {
         console = {};
         console.log = function () {};
         console.warn = function () {};
@@ -108,7 +108,7 @@
         console.error = function () {};
         console.debug = function () {};
       }
-  </script>
+*/  </script>
 
 </head>
 
