finished more bugherd tasks

--- a/sphere.html
+++ b/sphere.html
@@ -119,6 +119,8 @@
 <template name="layout">
   <!--[if lt IE 9]><div class="ie"><![endif]-->
 
+  {{> banderole}}
+
   <div id="grid-overlay"></div>
   <div id="baseline-grid-overlay"></div>
 
