--- a/sphere.html
+++ b/sphere.html
@@ -24,7 +24,7 @@
      })(document, 'script');
   </script>
   <script>
-      if (document.location.href.indexOf("http://localhost:3000" === 0)) {
+      /*if (document.location.href.indexOf("http://localhost:3000" === 0)) {
         jQuery(function ($) {
             $(document).keydown(function (e) {
                 if ("B" == String.fromCharCode(e.which)) {
@@ -34,7 +34,7 @@
                     $("#grid-overlay").toggle();
                 }
             });
-        });
+        });*/
       }
 
       // Tell IE9 to use its built-in console
