GA and web prospector tracking code

--- a/sphere.html
+++ b/sphere.html
@@ -23,6 +23,31 @@
        s.parentNode.insertBefore(bh, s);
      })(document, 'script');
   </script>
+  <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-31559977-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+
+       })();
+  </script>
+  <!-- WebProspector Tracking-Pixel -->
+  <script type="text/javascript">
+    var trs_args={};
+    trs_args.cid='9d16a8af009fd12c0b84917bc02dc479';
+    trs_args.ignore=false;
+    (function() {
+     var trs = document.createElement('script');
+     trs.type = 'text/javascript'; trs.async = true;
+     trs.src = (document.location.protocol=='https:'?'https:':'http:')+'//trs.webprospector.de/trs.js';
+     var trs_t = document.getElementsByTagName('script')[0];
+     trs_t.parentNode.insertBefore(trs, trs_t);
+    })();
+  </script>
   <script>
       /*if (document.location.href.indexOf("http://localhost:3000" === 0)) {
         jQuery(function ($) {
